# gmail2bear

./: .gitignore  .pre-commit-config.yaml  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
config/: config.ini.example
local-research/: design.md  plan.md  prd.md
scripts/: install_oneliner.sh  install_service.py
src/gmail2bear/: __init__.py  auth.py  bear.py  cli.py  config.py  gmail_client.py  notifications.py  processor.py  state.py
src/gmail2bear/launchagent/: __init__.py  com.gmail2bear.plist.template  manager.py
tests/: __init__.py  conftest.py  test_auth.py  test_bear.py  test_cli.py  test_config.py  test_gmail_client.py  test_launchagent.py  test_notifications.py  test_processor.py  test_processor_notifications.py  test_retry_mechanism.py  test_state.py  test_system_integration.py
